--- a/private/email_templates/notification.html
+++ b/private/email_templates/notification.html
@@ -221,7 +221,7 @@
                         <div style="border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent; padding-top:0px; padding-bottom:0px; padding-right: 0px; padding-left: 0px;"><!--<![endif]-->
                         <div align="center" class="img-container center fixedwidth" style="padding-right: 25px;  padding-left: 25px;">
                         <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 25px; padding-left: 25px;" align="center"><![endif]-->
-                        <div style="line-height:25px;font-size:1px">&#160;</div>  <img class="center fixedwidth" align="center" border="0" src="{{baseUrl}}/images/Giveth-typelogo.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: 0;height: auto;float: none;width: 100%;max-width: 99.6px" width="99.6">
+                        <div style="line-height:25px;font-size:1px">&#160;</div>  <img class="center fixedwidth" align="center" border="0" src="{{baseUrl}}/images/B4H-logo.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: 0;height: auto;float: none;width: 100%;max-width: 58.4px" width="58.4">
                         <div style="line-height:25px;font-size:1px">&#160;</div><!--[if mso]></td></tr></table><![endif]-->
                       </div>
 
@@ -392,7 +392,7 @@
                     <!-- call to action -->
 
                           
-                    <!-- goodbye from Giveth -->
+                    <!-- goodbye from B4H -->
                     <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px;"><![endif]-->
                     <div style="font-family:'Lato', Tahoma, Verdana, Segoe, sans-serif;line-height:150%;color:#555555; padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px;">	
                     	<div style="font-size:12px;line-height:18px;color:#555555;font-family:'Lato', Tahoma, Verdana, Segoe, sans-serif;text-align:left;">
@@ -403,13 +403,13 @@
                         </p>
                         <p style="margin: 0;font-size: 12px;line-height: 18px;text-align: center">
                           <span style="font-size: 16px; line-height: 24px;">
-                            Giveth
+                            B4H
                           </span>
                         </p>
                       </div>	
                     </div>
                     <!--[if mso]></td></tr></table><![endif]-->
-                    <!-- goodbye from Giveth -->
+                    <!-- goodbye from B4H -->
 
                           
                     <!-- spacer -->                        
@@ -458,7 +458,7 @@
                           <p style="margin: 0;font-size: 12px;line-height: 18px;text-align: center">
                             <span style="color: rgb(128, 128, 128); font-size: 12px; line-height: 18px;">
                               {{unsubscribeReason}} at 
-                              <a style="color:#67CCDE;text-decoration: underline;" href="{{dappUrl}}" target="_blank" rel="noopener">Giveth</a>
+                              <a style="color:#67CCDE;text-decoration: underline;" href="{{dappUrl}}" target="_blank" rel="noopener">B4H Dapp</a>
                             </span>
                           </p>
                           <p style="margin: 0;font-size: 11px;line-height: 18px;text-align: center">
