--- a/public/404.html
+++ b/public/404.html
@@ -59,7 +59,7 @@
       <h1 id="error-code" class="center-text">Sorry!</h1>
       <h2 id="error-message" class="center-text">We couldn't find the page you're looking for.</h2>
       <footer>
-        <p class="center-text">Powered by <a href="https://www.giveth.io" target="_blank" alt="Powered by Giveth">Giveth</a></p>
+        <p class="center-text">Powered by <a href="https://dapp.b4h.world" target="_blank" alt="Powered by Blockchain for Humanity">Blockchain for Humanity</a></p>
       </footer>
     </main>
   </body>
